Last Python3 version

--- a/help/..@.in
+++ b/help/..@.in
@@ -1,7 +1,10 @@
 <cache xmlns="http://projectmallard.org/1.0/";>
 <page href='basics.page'/>
+<page href='calculus.page'/>
+<page href='complex.page'/>
 <page href='index.page'/>
 <page href='matrices.page'/>
 <page href='stats.page'/>
 <page href='trig.page'/>
+<page href='vectors.page'/>
 </cache>
